[Beta v1.0.0]
-

[Beta v1.0.01]
- Bugfix: popup menu of a DockTitle did not open on right click under Windows XP
- Bugfix: Connection between DockableDisplayer and Dockable was not broken automatically (memory leak)
- Bugfix: Connection between MultiDockActionSource and its children was not broken automatically (memory leak)
- Bugfix: FullScreenListener was not removed from Map (memory leak)
- API: StackDockStation now reads a StackDockComponentFactory out of the DockProperties, and changes its StackDockComponent according to the factory. DockThemes no longer have to exchange the components manually.
- Layout: Left-click on AbstractDockTitle will open a popup menu more often
- Bugfix: SplitDockStation did not properly remove the front-dockable when requested
- Layout: FlapDockStation now changes the selected child when the mouse is released, not when the mouse is pressed.
- Layout: The DockTitles shown as Buttons for FlapDockStation have additional behavior when the mouse is pressed.
- Bugfix: added some dirty hacks to ensure that the title-drag-window will close itself when the first event was ignored. That happend when the Window was not visible when dispose was called.
- Bugfix: PopupController did not calculate the correct position of the mouse
- Bugfix: AbstractDockTitle did not calculate the correct position and size of its icon when explicitly asked
- Bugfix: NPE thrown by SecureFlapWindow when closing the window a second time
- API: delete some subclasses of Combiner which are no longer needed (Bubble/FlatCombiner)
- Layout: BasicStationPaint now uses the highlight-background color of TextField to paint. That should look better with different look and feels.
- Bugfix: SplitDockStation's compare-method now ensures that the station does not overlap other, smaller stations
- Layout: New "Eclipse Theme", written by Janni Kovacs
- Bugfix: SecureScreenDockDialog throw NPE when closing