@@ -1,8 +1,11 @@
 package bibliothek.extension.gui.dock.theme.eclipse;
 
 import java.awt.Component;
+import java.awt.Point;
+import java.awt.Rectangle;
 
 import javax.swing.JPanel;
+import javax.swing.SwingUtilities;
 
 import bibliothek.extension.gui.dock.theme.EclipseTheme;
 import bibliothek.gui.DockController;
@@ -74,5 +77,17 @@ public class EclipseDockableDisplayer extends DockableDisplayer {
 		if (dockable != null)
 			tabs.addTab(dockable.getTitleText(), dockable.getTitleIcon(), dockable.getComponent(), dockable);
 		invalidate();
+	}
+	
+	@Override
+	public boolean titleContains( int x, int y ){
+		Point point = new Point( x, y );
+		point = SwingUtilities.convertPoint( this, point, tabs );
+		for( int i = 0, n = tabs.getTabCount(); i<n; i++ ){
+			Rectangle bounds = tabs.getBoundsAt( i );
+			if( bounds.contains( point ))
+				return true;
+		}
+		return false;
 	}
 }
